testdata/golden/sema/valid/concurrency/atomic_valid.sg
// Valid @atomic field usage with int, uint, bool, and pointer types

type AtomicCounter = {
    @atomic count: int,
    @atomic flags: uint,
    @atomic active: bool,
}

type AtomicPointer = {
    @atomic ptr: *int,
}

pub fn test_atomic_int() -> nothing {
    let mut a: AtomicCounter = AtomicCounter { count: 0, flags: 0, active: false };
    a.count = 1;
    a.flags = 255;
    a.active = true;
}
